--- a/02-ptg-sql.Rmd
+++ b/02-ptg-sql.Rmd
@@ -1,7 +1,4 @@
----
-title: "ptg-sql"
-output: html_document
----
+# ptg-sql
 
 * create sqllite db for the existing sample data 
 * go over creating the appropriate sql code.
