--- a/index.Rmd
+++ b/index.Rmd
@@ -4,8 +4,18 @@ author: "Josiah Parry"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
-#bibliography: [book.bib, packages.bib]
+bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
 description: ""
 ---
+
+This are some words
+
+
+```{r include=FALSE}
+# automatically create a bib database for R packages
+knitr::write_bib(c(
+  .packages(), 'bookdown', 'knitr', 'rmarkdown'
+), 'packages.bib')
+```
