--- a/packages.bib
+++ b/packages.bib
@@ -76,6 +76,13 @@
   note = {R package version 1.12},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
+@Manual{R-rvest,
+  title = {rvest: Easily Harvest (Scrape) Web Pages},
+  author = {Hadley Wickham},
+  year = {2016},
+  note = {R package version 0.3.2},
+  url = {https://CRAN.R-project.org/package=rvest},
+}
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
@@ -110,4 +117,11 @@
   year = {2019},
   note = {R package version 0.1.1},
   url = {https://CRAN.R-project.org/package=trendyy},
+}
+@Manual{R-xml2,
+  title = {xml2: Parse XML},
+  author = {Hadley Wickham and James Hester and Jeroen Ooms},
+  year = {2018},
+  note = {R package version 1.2.0},
+  url = {https://CRAN.R-project.org/package=xml2},
 }
